tests/baselines/reference/untypedModuleImport_noImplicitAny.errors.txt
/a.ts(1,22): error TS2307: Cannot find module 'foo'.


==== /a.ts (1 errors) ====
    import * as foo from "foo";
                         ~~~~~
!!! error TS2307: Cannot find module 'foo'.
    
==== /node_modules/foo/package.json (0 errors) ====
    {}
    